# ches-tutorial-2024

./: .gitignore  Dockerfile  Makefile  README.md  show.tcl  synth.tcl  unlock.sh
cpp/: ascon.cpp  ascon.h  ascon.hpp  present.cpp  present.h
rtl/: ascon_sbox.sv  d_register.sv  gf16_inv.sv  masked_ascon_sbox_dom.sv  masked_ascon_sbox_dom_v1.sv  masked_ascon_sbox_dom_v2.sv  masked_dom_mul.sv  masked_not.sv  masked_xor.sv  register.sv
sca/: CMakeLists.txt  coco-verif-preview  sca_masked_ascon_sbox_dom.cpp  sca_masked_dom_mul.cpp  sca_masked_xor.cpp
solutions/rtl/: ascon_sbox.sv  dev_package.sv  masked_ascon_sbox_dom_v1.sv  masked_ascon_sbox_dom_v2.sv  masked_dom_mul.sv  masked_not.sv  masked_xor.sv  masked_zero.sv  present_sbox.sv  reduce_xor.sv
solutions/sca/: sca_masked_dom_mul.cpp
tb/: tb_ascon_sbox.cpp  tb_masked_ascon_sbox_dom.cpp  tb_masked_dom_mul.cpp  tb_masked_not.cpp  tb_masked_xor.cpp  tb_present_sbox.cpp
